welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:10: error: type mismatch;
 found   : Unit
 required: Int
	} else if ( a < b ) {
               ^